--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.port=${PORT:8080}
 # ===============================
 # MAIL (ENV-DRIVEN)
 # ===============================
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
